syntax = "proto3";

package trpc.elysia.backend.user;
option go_package="github.com/yzf120/elysia-backend/proto/user";

// 用户服务定义
service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

// 用户信息
message User {
  string user_id = 1;                    // 用户ID
  string user_name = 2;                  // 用户名
  string email = 3;                      // 邮箱
  int32 gender = 4;                      // 性别 0-未知 1-男 2-女
  string phone_number = 5;               // 手机号
  string wx_mini_app_open_id = 6;        // 微信小程序openID
  string chinese_name = 7;               // 中文姓名
  int32 risk_level = 8;                  // 账号风险等级
  int32 status = 9;                      // 状态 1-待审批 2-可用 3-驳回 4-封号
  string create_time = 10;               // 创建时间
  string update_time = 11;               // 更新时间
  string image_url = 12;                 // 用户头像地址
  string register_source = 13;           // 注册来源 phone/miniprogram/manual
  string user_type = 14;                 // 用户类型
}

// 创建用户请求
message CreateUserRequest {
  string user_name = 1;                  // 用户名（必填）
  string password = 2;                   // 密码（必填）
  string email = 3;                      // 邮箱（可选）
  int32 gender = 4;                      // 性别（可选）
  string phone_number = 5;               // 手机号（必填，用于注册）
  string wx_mini_app_open_id = 6;        // 微信小程序openID（可选）
  string chinese_name = 7;               // 中文姓名（可选）
  string image_url = 8;                  // 用户头像地址（可选）
  string register_source = 9;            // 注册来源（必填）
  string user_type = 10;                 // 用户类型（可选）
}

// 创建用户响应
message CreateUserResponse {
  int32 code = 1;                        // 响应码 0-成功 其他-失败
  string message = 2;                    // 响应消息
  User user = 3;                         // 创建的用户信息
}

// 获取用户请求
message GetUserRequest {
  string user_id = 1;                    // 用户ID（三选一）
  string phone_number = 2;               // 手机号（三选一）
  string wx_mini_app_open_id = 3;        // 微信小程序openID（三选一）
}

// 获取用户响应
message GetUserResponse {
  int32 code = 1;                        // 响应码 0-成功 其他-失败
  string message = 2;                    // 响应消息
  User user = 3;                         // 用户信息
}

// 更新用户请求
message UpdateUserRequest {
  string user_id = 1;                    // 用户ID（必填）
  string user_name = 2;                  // 用户名（可选）
  string email = 3;                      // 邮箱（可选）
  int32 gender = 4;                      // 性别（可选）
  string phone_number = 5;               // 手机号（可选）
  string chinese_name = 6;               // 中文姓名（可选）
  int32 status = 7;                      // 状态（可选）
  string image_url = 8;                  // 用户头像地址（可选）
  string user_type = 9;                 // 用户类型（可选）
}

// 更新用户响应
message UpdateUserResponse {
  int32 code = 1;                        // 响应码 0-成功 其他-失败
  string message = 2;                    // 响应消息
  User user = 3;                         // 更新后的用户信息
}

// 删除用户请求
message DeleteUserRequest {
  string user_id = 1;                    // 用户ID（必填）
}

// 删除用户响应
message DeleteUserResponse {
  int32 code = 1;                        // 响应码 0-成功 其他-失败
  string message = 2;                    // 响应消息
}

// 查询用户列表请求
message ListUsersRequest {
  int32 page = 1;                        // 页码（从1开始）
  int32 page_size = 2;                   // 每页数量
  int32 status = 3;                      // 状态筛选（可选）
  string register_source = 4;            // 注册来源筛选（可选）
  string user_type = 5;                  // 用户类型筛选（可选）
}

// 查询用户列表响应
message ListUsersResponse {
  int32 code = 1;                        // 响应码 0-成功 其他-失败
  string message = 2;                    // 响应消息
  repeated User users = 3;               // 用户列表
  int32 total = 4;                       // 总数
  int32 page = 5;                        // 当前页码
  int32 page_size = 6;                   // 每页数量
}